Creating simple query, that returns json-object

--- a/Idea_Keeper_server/src/main/resources/db.properties
+++ b/Idea_Keeper_server/src/main/resources/db.properties
@@ -3,3 +3,11 @@ db.url = jdbc:postgresql://localhost:5432/reminderdb
 db.username = postgres
 db.password = postgres
 db.entity.package = com.devel.ideakeeper.server.entity
+
+db.initialSize = 30
+db.minIdle = 30
+db.maxIdle = 60
+db.timeBetweenEvictionRunMillis = 30000
+db.minEvictableIdleTimeMillis = 60000
+db.testOnBorrow = true
+db.validationQuery = select version()
