--- a/Idea_Keeper_server/src/main/resources/hibernate.properties
+++ b/Idea_Keeper_server/src/main/resources/hibernate.properties
@@ -1,3 +1,3 @@
 hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 hibernate.show.sql = true
-hibernate.hbn2dll.auto = validate
+hibernate.hbn2dll.auto = create
